--- a/pytorch-sm-bert-data-parallel.ipynb
+++ b/pytorch-sm-bert-data-parallel.ipynb
@@ -102,9 +102,9 @@
       "\u001b[34mif\u001b[39;49;00m \u001b[31m__name__\u001b[39;49;00m == \u001b[33m'\u001b[39;49;00m\u001b[33m__main__\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m:\n",
       "    parser = argparse.ArgumentParser()\n",
       "    \u001b[37m# Hyperparameters sent by the client are passed as command-line arguments to the script\u001b[39;49;00m\n",
-      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--epochs\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m3\u001b[39;49;00m)\n",
-      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--train-batch-size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
-      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--eval-batch-size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m64\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--epochs\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m10\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--train_batch_size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--eval_batch_size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
       "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--warmup_steps\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m500\u001b[39;49;00m)\n",
       "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--model_name\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m)\n",
       "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--learning_rate\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=\u001b[34m5e-5\u001b[39;49;00m)\n",
@@ -128,8 +128,8 @@
       "    )\n",
       "\n",
       "    \u001b[37m# Load train and test datasets\u001b[39;49;00m\n",
-      "    train_dataset = load_from_disk(args.training_dir)\n",
-      "    test_dataset = load_from_disk(args.test_dir)\n",
+      "    train_dataset = load_from_disk(args.training_dir, keep_in_memory=\u001b[34mTrue\u001b[39;49;00m)\n",
+      "    test_dataset = load_from_disk(args.test_dir, keep_in_memory=\u001b[34mTrue\u001b[39;49;00m)\n",
       "\n",
       "    logger.info(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m[Loaded train_dataset length is: \u001b[39;49;00m\u001b[33m{\u001b[39;49;00m\u001b[33mlen(train_dataset)}]\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
       "    logger.info(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m[Loaded test_dataset length is: \u001b[39;49;00m\u001b[33m{\u001b[39;49;00m\u001b[33mlen(test_dataset)}]\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
@@ -202,8 +202,8 @@
    "outputs": [],
    "source": [
     "hyperparameters={'epochs': 3,\n",
-    "                 'train_batch_size': 64,\n",
-    "                 'eval_batch_size': 64,\n",
+    "                 'train_batch_size': 32,\n",
+    "                 'eval_batch_size': 32,\n",
     "                 'model_name': 'distilbert-base-uncased'}"
    ]
   },
@@ -319,16 +319,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2021-10-13 21:20:50 Starting - Starting the training job..\n",
-      "2021-10-13 21:21:02 Starting - Launching requested ML instances.......................\n",
-      "2021-10-13 21:23:04 Starting - Preparing the instances for training............................\n",
-      "2021-10-13 21:25:29 Downloading - Downloading input data........\n",
-      "2021-10-13 21:26:12 Training - Downloading the training image...................\n",
-      "2021-10-13 21:27:57 Training - Training image download completed. Training in progress............................................................\n",
-      "2021-10-13 21:32:58 Uploading - Uploading generated training model.......\n",
-      "2021-10-13 21:33:39 Completed - Training job completed\n",
-      "CPU times: user 704 ms, sys: 80.8 ms, total: 785 ms\n",
-      "Wall time: 12min 49s\n"
+      "2021-10-14 19:54:52 Starting - Starting the training job.\n",
+      "2021-10-14 19:54:59 Starting - Launching requested ML instances........................\n",
+      "2021-10-14 19:57:04 Starting - Preparing the instances for training...........................\n",
+      "2021-10-14 19:59:26 Downloading - Downloading input data.......\n",
+      "2021-10-14 20:00:08 Training - Downloading the training image.................\n",
+      "2021-10-14 20:01:35 Training - Training image download completed. Training in progress..................................\n",
+      "2021-10-14 20:04:29 Uploading - Uploading generated training model........\n",
+      "2021-10-14 20:05:15 Completed - Training job completed\n",
+      "CPU times: user 549 ms, sys: 89.1 ms, total: 638 ms\n",
+      "Wall time: 10min 24s\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-13-21-20-49-770/output/model.tar.gz\n"
+      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-14-19-54-52-044/output/model.tar.gz\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-13-21-20-49-770\n"
+      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-14-19-54-52-044\n"
      ]
     }
    ],
@@ -395,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---------------!"
+      "----------------!"
      ]
     }
    ],
@@ -427,7 +427,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'label': 'LABEL_1', 'score': 0.8686443567276001}]"
+       "[{'label': 'LABEL_1', 'score': 0.8797507882118225}]"
       ]
      },
      "execution_count": 17,
