--- a/pytorch-sm-bert-dist.ipynb
+++ b/pytorch-sm-bert-dist.ipynb
@@ -102,9 +102,9 @@
       "\u001b[34mif\u001b[39;49;00m \u001b[31m__name__\u001b[39;49;00m == \u001b[33m'\u001b[39;49;00m\u001b[33m__main__\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m:\n",
       "    parser = argparse.ArgumentParser()\n",
       "    \u001b[37m# Hyperparameters sent by the client are passed as command-line arguments to the script\u001b[39;49;00m\n",
-      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--epochs\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m3\u001b[39;49;00m)\n",
-      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--train-batch-size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
-      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--eval-batch-size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m64\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--epochs\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m10\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--train_batch_size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
+      "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--eval_batch_size\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m32\u001b[39;49;00m)\n",
       "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--warmup_steps\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mint\u001b[39;49;00m, default=\u001b[34m500\u001b[39;49;00m)\n",
       "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--model_name\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m)\n",
       "    parser.add_argument(\u001b[33m'\u001b[39;49;00m\u001b[33m--learning_rate\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[36mtype\u001b[39;49;00m=\u001b[36mstr\u001b[39;49;00m, default=\u001b[34m5e-5\u001b[39;49;00m)\n",
@@ -128,8 +128,8 @@
       "    )\n",
       "\n",
       "    \u001b[37m# Load train and test datasets\u001b[39;49;00m\n",
-      "    train_dataset = load_from_disk(args.training_dir)\n",
-      "    test_dataset = load_from_disk(args.test_dir)\n",
+      "    train_dataset = load_from_disk(args.training_dir, keep_in_memory=\u001b[34mTrue\u001b[39;49;00m)\n",
+      "    test_dataset = load_from_disk(args.test_dir, keep_in_memory=\u001b[34mTrue\u001b[39;49;00m)\n",
       "\n",
       "    logger.info(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m[Loaded train_dataset length is: \u001b[39;49;00m\u001b[33m{\u001b[39;49;00m\u001b[33mlen(train_dataset)}]\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
       "    logger.info(\u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m[Loaded test_dataset length is: \u001b[39;49;00m\u001b[33m{\u001b[39;49;00m\u001b[33mlen(test_dataset)}]\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)\n",
@@ -202,8 +202,8 @@
    "outputs": [],
    "source": [
     "hyperparameters={'epochs': 3,\n",
-    "                 'train_batch_size': 64,\n",
-    "                 'eval_batch_size': 64,\n",
+    "                 'train_batch_size': 32,\n",
+    "                 'eval_batch_size': 32,\n",
     "                 'model_name': 'distilbert-base-uncased'}"
    ]
   },
@@ -302,16 +302,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2021-10-13 21:48:21 Starting - Starting the training job.\n",
-      "2021-10-13 21:48:28 Starting - Launching requested ML instances....................\n",
-      "2021-10-13 21:50:16 Starting - Preparing the instances for training........................\n",
-      "2021-10-13 21:52:22 Downloading - Downloading input data.....\n",
-      "2021-10-13 21:52:49 Training - Downloading the training image.......................\n",
-      "2021-10-13 21:54:50 Training - Training image download completed. Training in progress........................................................................................................\n",
-      "2021-10-13 22:03:34 Uploading - Uploading generated training model............\n",
-      "2021-10-13 22:04:40 Completed - Training job completed\n",
-      "CPU times: user 860 ms, sys: 158 ms, total: 1.02 s\n",
-      "Wall time: 16min 21s\n"
+      "2021-10-14 19:31:28 Starting - Starting the training job\n",
+      "2021-10-14 19:31:31 Starting - Launching requested ML instances....................\n",
+      "2021-10-14 19:33:15 Starting - Preparing the instances for training....................\n",
+      "2021-10-14 19:35:03 Downloading - Downloading input data.............\n",
+      "2021-10-14 19:36:13 Training - Downloading the training image.............\n",
+      "2021-10-14 19:37:22 Training - Training image download completed. Training in progress...................................................................\n",
+      "2021-10-14 19:43:00 Uploading - Uploading generated training model...........\n",
+      "2021-10-14 19:44:00 Completed - Training job completed\n",
+      "CPU times: user 672 ms, sys: 93.1 ms, total: 765 ms\n",
+      "Wall time: 12min 34s\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-13-21-48-20-775/output/model.tar.gz\n"
+      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-14-19-31-27-708/output/model.tar.gz\n"
      ]
     }
    ],
@@ -354,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-13-21-48-20-775\n"
+      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-14-19-31-27-708\n"
      ]
     }
    ],
@@ -378,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-------!"
+      "----------------!"
      ]
     }
    ],
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'label': 'LABEL_1', 'score': 0.9366546273231506}]"
+       "[{'label': 'LABEL_1', 'score': 0.8974300622940063}]"
       ]
      },
      "execution_count": 16,
