--- a/pytorch-sm-bert-single.ipynb
+++ b/pytorch-sm-bert-single.ipynb
@@ -202,8 +202,8 @@
    "outputs": [],
    "source": [
     "hyperparameters={'epochs': 3,\n",
-    "                 'train_batch_size': 64,\n",
-    "                 'eval_batch_size': 64,\n",
+    "                 'train_batch_size': 32,\n",
+    "                 'eval_batch_size': 32,\n",
     "                 'model_name': 'distilbert-base-uncased'}"
    ]
   },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -302,8 +302,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2021-10-14 19:09:19 Starting - Starting the training job\n",
-      "2021-10-14 19:09:23 Starting - Launching requested ML instances....................."
+      "2021-10-14 19:18:39 Starting - Starting the training job.\n",
+      "2021-10-14 19:18:46 Starting - Launching requested ML instances.......................\n",
+      "2021-10-14 19:20:48 Starting - Preparing the instances for training..................\n",
+      "2021-10-14 19:22:23 Downloading - Downloading input data.....\n",
+      "2021-10-14 19:22:54 Training - Downloading the training image............................\n",
+      "2021-10-14 19:25:17 Training - Training image download completed. Training in progress............................................................\n",
+      "2021-10-14 19:30:22 Uploading - Uploading generated training model.......\n",
+      "2021-10-14 19:31:02 Completed - Training job completed\n",
+      "CPU times: user 667 ms, sys: 81.6 ms, total: 749 ms\n",
+      "Wall time: 12min 24s\n"
      ]
     }
    ],
@@ -322,18 +330,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "S3 uri where the trained model is located: s3://sagemaker-us-east-1-119174016168/huggingface-pytorch-training-2021-10-14-19-18-38-908/output/model.tar.gz\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'S3 uri where the trained model is located: {huggingface_estimator.model_data}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Latest training job name for this estimator: huggingface-pytorch-training-2021-10-14-19-18-38-908\n"
+     ]
+    }
+   ],
    "source": [
     "logger.info(f'Latest training job name for this estimator: {huggingface_estimator.latest_training_job.name}')"
    ]
@@ -347,9 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------!"
+     ]
+    }
+   ],
    "source": [
     "predictor = huggingface_estimator.deploy(1, 'ml.g4dn.xlarge')"
    ]
@@ -363,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,9 +404,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'LABEL_1', 'score': 0.8775299191474915}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response = predictor.predict(sentiment_input)\n",
     "response"
